tests/snapshots/reconstruction__analysis_antialiased_gradient.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 1)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.6,
    "border_colour": null,
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#3030b0",
      "fraction": 0.2
    },
    {
      "colour": "#3030d0",
      "fraction": 0.1
    },
    {
      "colour": "#5030b0",
      "fraction": 0.1
    },
    {
      "colour": "#503090",
      "fraction": 0.1
    },
    {
      "colour": "#703090",
      "fraction": 0.1
    },
    {
      "colour": "#903050",
      "fraction": 0.1
    },
    {
      "colour": "#703070",
      "fraction": 0.1
    },
    {
      "colour": "#903070",
      "fraction": 0.0
    }
  ],
  "foreground": {
    "pixel_fraction": 0.4,
    "bounding_box": {
      "x": 10,
      "y": 10,
      "width": 45,
      "height": 45
    }
  },
  "region_count": 1,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 10,
        "y": 10,
        "width": 45,
        "height": 45
      },
      "area": 1649,
      "centroid": {
        "x": 32.0,
        "y": 32.0
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 0.9,
    "vertical": 0.9
  },
  "appearance": {
    "alpha": {
      "transparent_fraction": 0.6,
      "translucent_fraction": 0.1,
      "opaque_fraction": 0.3,
      "interior_translucent_fraction": 0.0
    },
    "regions": [
      {
        "region_id": 0,
        "fill": {
          "kind": "radial_gradient",
          "centre": {
            "x": 32.0,
            "y": 32.0
          },
          "radius": 22.8,
          "stops": [
            {
              "offset": 0.0,
              "colour": "#c81e1e",
              "opacity": 1.0
            },
            {
              "offset": 0.9,
              "colour": "#2d27c2",
              "opacity": 1.0
            },
            {
              "offset": 1.0,
              "colour": "#2628ca",
              "opacity": 0.7
            }
          ],
          "fit": 1.0
        },
        "opacity": {
          "min": 0.7,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": null
      }
    ]
  }
}
