tests/snapshots/reconstruction__analysis_holes.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 4)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.0,
    "border_colour": "#ffffff",
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#f0f0f0",
      "fraction": 0.6631
    },
    {
      "colour": "#101010",
      "fraction": 0.2881
    },
    {
      "colour": "#505050",
      "fraction": 0.0137
    },
    {
      "colour": "#303030",
      "fraction": 0.0078
    },
    {
      "colour": "#707070",
      "fraction": 0.0078
    },
    {
      "colour": "#909090",
      "fraction": 0.0078
    },
    {
      "colour": "#b0b0b0",
      "fraction": 0.0059
    },
    {
      "colour": "#d0d0d0",
      "fraction": 0.0059
    }
  ],
  "foreground": {
    "pixel_fraction": 0.3369,
    "bounding_box": {
      "x": 8,
      "y": 8,
      "width": 48,
      "height": 48
    }
  },
  "region_count": 2,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 8,
        "y": 8,
        "width": 48,
        "height": 48
      },
      "area": 1260,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    },
    {
      "id": 1,
      "bounding_box": {
        "x": 26,
        "y": 26,
        "width": 12,
        "height": 12
      },
      "area": 120,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    }
  ],
  "hole_count": 1,
  "holes": [
    {
      "bounding_box": {
        "x": 18,
        "y": 18,
        "width": 28,
        "height": 28
      },
      "area": 472,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      },
      "enclosed_by": 0
    }
  ],
  "symmetry": {
    "horizontal": 1.0,
    "vertical": 1.0
  },
  "appearance": {
    "alpha": {
      "transparent_fraction": 0.0,
      "translucent_fraction": 0.0,
      "opaque_fraction": 1.0,
      "interior_translucent_fraction": 0.0
    },
    "regions": [
      {
        "region_id": 0,
        "fill": {
          "kind": "flat",
          "colour": "#18181b",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": {
          "width": 9.6667,
          "length": 130.3448,
          "elongation": 13.4839,
          "width_uniformity": 0.9614,
          "closed": true,
          "confidence": 0.9614
        }
      },
      {
        "region_id": 1,
        "fill": {
          "kind": "flat",
          "colour": "#18181b",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": null
      }
    ]
  }
}
