tests/snapshots/reconstruction__analysis_multicolour.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 4)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.874,
    "border_colour": null,
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#1050d0",
      "fraction": 0.3333
    },
    {
      "colour": "#10b030",
      "fraction": 0.3333
    },
    {
      "colour": "#d01010",
      "fraction": 0.3333
    }
  ],
  "foreground": {
    "pixel_fraction": 0.126,
    "bounding_box": {
      "x": 7,
      "y": 25,
      "width": 50,
      "height": 14
    }
  },
  "region_count": 3,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 7,
        "y": 25,
        "width": 14,
        "height": 14
      },
      "area": 172,
      "centroid": {
        "x": 13.5,
        "y": 31.5
      }
    },
    {
      "id": 1,
      "bounding_box": {
        "x": 25,
        "y": 25,
        "width": 14,
        "height": 14
      },
      "area": 172,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    },
    {
      "id": 2,
      "bounding_box": {
        "x": 43,
        "y": 25,
        "width": 14,
        "height": 14
      },
      "area": 172,
      "centroid": {
        "x": 49.5,
        "y": 31.5
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 1.0,
    "vertical": 1.0
  },
  "appearance": {
    "alpha": {
      "transparent_fraction": 0.874,
      "translucent_fraction": 0.0293,
      "opaque_fraction": 0.0967,
      "interior_translucent_fraction": 0.0
    },
    "regions": [
      {
        "region_id": 0,
        "fill": {
          "kind": "flat",
          "colour": "#dc1e1e",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": null
      },
      {
        "region_id": 1,
        "fill": {
          "kind": "flat",
          "colour": "#1ea03c",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": null
      },
      {
        "region_id": 2,
        "fill": {
          "kind": "flat",
          "colour": "#1e5adc",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": null
      }
    ]
  }
}
