tests/snapshots/reconstruction__analysis_noisy.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 4)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.0,
    "border_colour": "#ffffff",
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#f0f0f0",
      "fraction": 0.666
    },
    {
      "colour": "#101010",
      "fraction": 0.1687
    },
    {
      "colour": "#1030b0",
      "fraction": 0.0549
    },
    {
      "colour": "#107030",
      "fraction": 0.0427
    },
    {
      "colour": "#b01010",
      "fraction": 0.0244
    },
    {
      "colour": "#905010",
      "fraction": 0.0183
    },
    {
      "colour": "#701090",
      "fraction": 0.0122
    },
    {
      "colour": "#303030",
      "fraction": 0.0039
    }
  ],
  "foreground": {
    "pixel_fraction": 0.334,
    "bounding_box": {
      "x": 6,
      "y": 6,
      "width": 53,
      "height": 53
    }
  },
  "region_count": 37,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 20,
        "y": 20,
        "width": 24,
        "height": 24
      },
      "area": 468,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    },
    {
      "id": 1,
      "bounding_box": {
        "x": 6,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 8.0
      }
    },
    {
      "id": 2,
      "bounding_box": {
        "x": 12,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 14.0,
        "y": 8.0
      }
    },
    {
      "id": 3,
      "bounding_box": {
        "x": 18,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 20.0,
        "y": 8.0
      }
    },
    {
      "id": 4,
      "bounding_box": {
        "x": 24,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 26.0,
        "y": 8.0
      }
    },
    {
      "id": 5,
      "bounding_box": {
        "x": 36,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 38.0,
        "y": 8.0
      }
    },
    {
      "id": 6,
      "bounding_box": {
        "x": 42,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 44.0,
        "y": 8.0
      }
    },
    {
      "id": 7,
      "bounding_box": {
        "x": 48,
        "y": 6,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 50.0,
        "y": 8.0
      }
    },
    {
      "id": 8,
      "bounding_box": {
        "x": 6,
        "y": 12,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 14.0
      }
    },
    {
      "id": 9,
      "bounding_box": {
        "x": 18,
        "y": 12,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 20.0,
        "y": 14.0
      }
    },
    {
      "id": 10,
      "bounding_box": {
        "x": 42,
        "y": 12,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 44.0,
        "y": 14.0
      }
    },
    {
      "id": 11,
      "bounding_box": {
        "x": 48,
        "y": 12,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 50.0,
        "y": 14.0
      }
    },
    {
      "id": 12,
      "bounding_box": {
        "x": 54,
        "y": 12,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 56.0,
        "y": 14.0
      }
    },
    {
      "id": 13,
      "bounding_box": {
        "x": 6,
        "y": 18,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 20.0
      }
    },
    {
      "id": 14,
      "bounding_box": {
        "x": 12,
        "y": 18,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 14.0,
        "y": 20.0
      }
    },
    {
      "id": 15,
      "bounding_box": {
        "x": 48,
        "y": 18,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 50.0,
        "y": 20.0
      }
    },
    {
      "id": 16,
      "bounding_box": {
        "x": 54,
        "y": 18,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 56.0,
        "y": 20.0
      }
    },
    {
      "id": 17,
      "bounding_box": {
        "x": 6,
        "y": 24,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 26.0
      }
    },
    {
      "id": 18,
      "bounding_box": {
        "x": 54,
        "y": 30,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 56.0,
        "y": 32.0
      }
    },
    {
      "id": 19,
      "bounding_box": {
        "x": 6,
        "y": 36,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 38.0
      }
    },
    {
      "id": 20,
      "bounding_box": {
        "x": 54,
        "y": 36,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 56.0,
        "y": 38.0
      }
    },
    {
      "id": 21,
      "bounding_box": {
        "x": 6,
        "y": 42,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 44.0
      }
    },
    {
      "id": 22,
      "bounding_box": {
        "x": 12,
        "y": 42,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 14.0,
        "y": 44.0
      }
    },
    {
      "id": 23,
      "bounding_box": {
        "x": 48,
        "y": 42,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 50.0,
        "y": 44.0
      }
    },
    {
      "id": 24,
      "bounding_box": {
        "x": 54,
        "y": 42,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 56.0,
        "y": 44.0
      }
    },
    {
      "id": 25,
      "bounding_box": {
        "x": 6,
        "y": 48,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 50.0
      }
    },
    {
      "id": 26,
      "bounding_box": {
        "x": 18,
        "y": 48,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 20.0,
        "y": 50.0
      }
    },
    {
      "id": 27,
      "bounding_box": {
        "x": 42,
        "y": 48,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 44.0,
        "y": 50.0
      }
    },
    {
      "id": 28,
      "bounding_box": {
        "x": 48,
        "y": 48,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 50.0,
        "y": 50.0
      }
    },
    {
      "id": 29,
      "bounding_box": {
        "x": 6,
        "y": 54,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 8.0,
        "y": 56.0
      }
    },
    {
      "id": 30,
      "bounding_box": {
        "x": 12,
        "y": 54,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 14.0,
        "y": 56.0
      }
    },
    {
      "id": 31,
      "bounding_box": {
        "x": 18,
        "y": 54,
        "width": 5,
        "height": 5
      },
      "area": 25,
      "centroid": {
        "x": 20.0,
        "y": 56.0
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 0.6209,
    "vertical": 0.6602
  }
}
