tests/snapshots/reconstruction__analysis_silhouette.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 4)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.0,
    "border_colour": "#ffffff",
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#f0f0f0",
      "fraction": 0.6582
    },
    {
      "colour": "#101010",
      "fraction": 0.333
    },
    {
      "colour": "#707070",
      "fraction": 0.0039
    },
    {
      "colour": "#303030",
      "fraction": 0.002
    },
    {
      "colour": "#d0d0d0",
      "fraction": 0.002
    },
    {
      "colour": "#505050",
      "fraction": 0.001
    }
  ],
  "foreground": {
    "pixel_fraction": 0.3418,
    "bounding_box": {
      "x": 12,
      "y": 14,
      "width": 40,
      "height": 36
    }
  },
  "region_count": 1,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 12,
        "y": 14,
        "width": 40,
        "height": 36
      },
      "area": 1400,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 1.0,
    "vertical": 1.0
  }
}
