tests/snapshots/reconstruction__analysis_symmetric.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 4)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.0,
    "border_colour": "#ffffff",
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#f0f0f0",
      "fraction": 0.7539
    },
    {
      "colour": "#101010",
      "fraction": 0.2461
    }
  ],
  "foreground": {
    "pixel_fraction": 0.2461,
    "bounding_box": {
      "x": 8,
      "y": 8,
      "width": 48,
      "height": 48
    }
  },
  "region_count": 1,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 8,
        "y": 8,
        "width": 48,
        "height": 48
      },
      "area": 1008,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 1.0,
    "vertical": 1.0
  },
  "appearance": {
    "alpha": {
      "transparent_fraction": 0.0,
      "translucent_fraction": 0.0,
      "opaque_fraction": 1.0,
      "interior_translucent_fraction": 0.0
    },
    "regions": [
      {
        "region_id": 0,
        "fill": {
          "kind": "flat",
          "colour": "#18181b",
          "spread": 0.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        },
        "stroke": {
          "width": 11.0,
          "length": 91.6364,
          "elongation": 8.3306,
          "width_uniformity": 0.9355,
          "closed": false,
          "confidence": 0.6495
        }
      }
    ]
  }
}
