tests/snapshots/reconstruction__analysis_translucent_fill.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(analysis, 1)"
---
{
  "dimensions": {
    "width": 64,
    "height": 64,
    "aspect_ratio": 1.0
  },
  "background": {
    "transparent_fraction": 0.6,
    "border_colour": null,
    "border_uniformity": 1.0
  },
  "dominant_colours": [
    {
      "colour": "#d01010",
      "fraction": 1.0
    }
  ],
  "foreground": {
    "pixel_fraction": 0.4,
    "bounding_box": {
      "x": 12,
      "y": 12,
      "width": 40,
      "height": 40
    }
  },
  "region_count": 1,
  "regions": [
    {
      "id": 0,
      "bounding_box": {
        "x": 12,
        "y": 12,
        "width": 40,
        "height": 40
      },
      "area": 1600,
      "centroid": {
        "x": 31.5,
        "y": 31.5
      }
    }
  ],
  "hole_count": 0,
  "holes": [],
  "symmetry": {
    "horizontal": 1.0,
    "vertical": 1.0
  },
  "appearance": {
    "alpha": {
      "transparent_fraction": 0.6,
      "translucent_fraction": 0.4,
      "opaque_fraction": 0.0,
      "interior_translucent_fraction": 0.4
    },
    "regions": [
      {
        "region_id": 0,
        "fill": {
          "kind": "flat",
          "colour": "#c81e1e",
          "spread": 0.0
        },
        "opacity": {
          "min": 0.5,
          "mean": 0.5,
          "max": 0.5
        },
        "stroke": null
      }
    ]
  }
}
